# CPP20_RayTracingTheNextWeek

./: Readme.md
CP_01_transform_motion_blur/: CMakeLists.txt  main.cpp
CP_01_transform_motion_blur/Core/: Hittable.hpp  Kernel.hpp  Utils.hpp  Vec.hpp
CP_01_transform_motion_blur/primitives/: PrimPlane.hpp  PrimSphere.hpp
CP_02_BVH/: CMakeLists.txt  main.cpp
CP_02_BVH/Core/: BVH.hpp  Hittable.hpp  Ray.hpp
CP_02_BVH/Materials/: Lambertian.hpp
CP_02_BVH/primitives/: PrimPlane.hpp  PrimSphere.hpp
CP_03_Texture/: CMakeLists.txt  main.cpp
CP_03_Texture/Core/: Material.hpp  Texture.hpp
CP_04_PerlinBlockNoise/: main.cpp
CP_04_PerlinBlockNoise/Core/: Utils.hpp
CP_04_PerlinBlockNoise/Materials/: Lambertian.hpp
CP_04_PerlinBlockNoise/Textures/: NoiseTexture.hpp  Perlin.hpp
CP_05_TextureMapping/: CMakeLists.txt  main.cpp
CP_05_TextureMapping/Core/: AABB.hpp  Camera.hpp  Kernel.hpp  Sampler.hpp  Vec.hpp
CP_05_TextureMapping/Materials/: Refract.hpp
CP_06_ConstantMat/: main.cpp
CP_06_ConstantMat/Core/: BVH.hpp  Material.hpp  Vec.hpp
CP_06_ConstantMat/Materials/: Constant.hpp
CP_06_ConstantMat/Textures/: Perlin.hpp
CP_06_ConstantMat/primitives/: PrimSphere.hpp
CP_07_ConstantMatBugFixed/: CMakeLists.txt  main.cpp
CP_07_ConstantMatBugFixed/Core/: Sampler.hpp
CP_07_ConstantMatBugFixed/Materials/: Lambertian.hpp
CP_08_Using_GLM/: CMakeLists.txt  main.cpp
CP_09_EmptyCornellBox/: main.cpp  scene.hip
CP_10_CornellBox_no_transformation/: CMakeLists.txt  main.cpp
CP_11_TransformHittable/: main.cpp  scene.hip
CP_12_BoxVolumeRendering/: main.cpp
(+27 files in other folders)
